clusters/cl01tl/manifests/home-assistant/Service-home-assistant-code-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-code-server
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/service: home-assistant-code-server
    helm.sh/chart: home-assistant-5.0.1
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
