clusters/cl01tl/manifests/home-assistant/Service-home-assistant-main.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-main
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/service: home-assistant-main
    helm.sh/chart: home-assistant-5.0.0
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
