clusters/cl01tl/manifests/home-assistant/HTTPRoute-home-assistant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    helm.sh/chart: home-assistant-5.1.0
  namespace: home-assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: "traefik"
  hostnames:
    - "home-assistant.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: home-assistant
          namespace: home-assistant
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
