clusters/cl01tl/manifests/home-assistant/HTTPRoute-http-route-home-assistant-code-server.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-home-assistant-code-server
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: http-route-home-assistant-code-server
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/part-of: home-assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - home-assistant-code-server.alexlebens.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: home-assistant-code-server
          port: 8443
          weight: 100
