clusters/cl01tl/manifests/home-assistant/home-assistant.yaml
---
# Source: home-assistant/charts/home-assistant/templates/common.yaml
---
# Source: home-assistant/charts/home-assistant/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-code-server
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/service: home-assistant-code-server
    helm.sh/chart: home-assistant-4.4.0
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
---
# Source: home-assistant/charts/home-assistant/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-main
  labels:
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/service: home-assistant-main
    helm.sh/chart: home-assistant-4.4.0
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8123
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/name: home-assistant
---
# Source: home-assistant/charts/home-assistant/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: home-assistant
    helm.sh/chart: home-assistant-4.4.0
  namespace: home-assistant
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/name: home-assistant
      app.kubernetes.io/instance: home-assistant
  template:
    metadata:
      labels: 
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: home-assistant
        app.kubernetes.io/name: home-assistant
    spec: 
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: true
      hostIPC: false
      hostNetwork: false
      hostPID: false
      dnsPolicy: ClusterFirst
      containers: 
        - env:
          - name: TZ
            value: US/Central
          - name: PUID
            value: "1000"
          - name: PGID
            value: "1000"
          - name: DEFAULT_WORKSPACE
            value: /config
          image: ghcr.io/linuxserver/code-server:4.106.3@sha256:aab9520fe923b2d93dccc2c806f3dc60649c2f4a2847fcd40c942227d0f1ae8f
          imagePullPolicy: IfNotPresent
          name: code-server
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
          volumeMounts:
          - mountPath: /config/home-assistant
            name: config
        - env:
          - name: TZ
            value: US/Central
          image: ghcr.io/home-assistant/home-assistant:2025.11.3
          imagePullPolicy: IfNotPresent
          name: main
          resources:
            requests:
              cpu: 50m
              memory: 512Mi
          volumeMounts:
          - mountPath: /config
            name: config
      volumes: 
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config
---
# Source: home-assistant/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: http-route-home-assistant
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/part-of: home-assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - home-assistant.alexlebens.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''
          kind: Service
          name: home-assistant-main
          port: 80
          weight: 100
---
# Source: home-assistant/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-home-assistant-code-server
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: http-route-home-assistant-code-server
    app.kubernetes.io/instance: home-assistant
    app.kubernetes.io/part-of: home-assistant
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - home-assistant-code-server.alexlebens.net
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - group: ''
          kind: Service
          name: home-assistant-code-server
          port: 8443
          weight: 100
